DM-119 Implement marina usage history endpoints.
