# internal/db/models.go
@@ -132,6 +132,17 @@ type MarinaGallery struct {
 	DeletedAt   pgtype.Timestamp
 }
 
+type MarinaUsageHistory struct {
+	ID           uuid.UUID
+	MarinaID     uuid.UUID
+	StorageUsage int64
+	EmailUsage   int16
+	TextUsage    int16
+	CreatedAt    pgtype.Timestamptz
+	UpdatedAt    pgtype.Timestamptz
+	MonthDate    pgtype.Date
+}
+
 type Message struct {
 	ID         uuid.UUID
 	MarinaID   uuid.UUID
